Fix workflow targets

--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -2,10 +2,14 @@ name: PHPStan
 
 on:
   push:
-    paths:
-      - "**.php"
-      - "phpstan.neon.dist"
-      - ".github/workflows/phpstan.yml"
+    paths-ignore:
+      - "docs/**"
+      - "README.md"
+  pull_request:
+    types: [ready_for_review, synchronize, opened]
+    paths-ignore:
+      - "docs/**"
+      - "README.md"
 
 env:
   phpv: 8.3
