--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -2,9 +2,14 @@ name: Formatting
 
 on:
   push:
-    paths:
-      - "**.php"
-      - ".github/workflows/formatting.yml"
+    paths-ignore:
+      - "docs/**"
+      - "README.md"
+  pull_request:
+    types: [ready_for_review, synchronize, opened]
+    paths-ignore:
+      - "docs/**"
+      - "README.md"
 
 env:
   phpv: 8.3
