--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "projektgopher/whisky": "^0.7.0",
     "orchestra/testbench": "^9.4",
     "mockery/mockery": "^1.6",
-    "symplify/rule-doc-generator-contracts": "^11.2"
+    "symplify/rule-doc-generator-contracts": "^11.2",
+    "phpstan/phpdoc-parser": "^1.24"
   },
   "autoload-dev": {
     "psr-4": {
