--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "orchestra/testbench": "^9.4",
     "mockery/mockery": "^1.6",
     "symplify/rule-doc-generator-contracts": "^11.2",
-    "phpstan/phpdoc-parser": "^1.24"
+    "phpstan/phpdoc-parser": "^1.24",
+    "peckphp/peck": "^0.1.1"
   },
   "autoload-dev": {
     "psr-4": {
