--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -36,3 +36,8 @@ jobs:
         run: |
           vendor/bin/rector
           git diff --exit-code
+
+      - name: Run Peck
+        run: |
+          vendor/bin/peck
+          git diff --exit-code
