--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     }
   ],
   "require": {
-    "php": "^8.3",
+    "php": "^8.2",
     "laravel/framework": "^11.0"
   },
   "config": {
@@ -38,8 +38,7 @@
     "orchestra/testbench": "^9.4",
     "mockery/mockery": "^1.6",
     "symplify/rule-doc-generator-contracts": "^11.2",
-    "phpstan/phpdoc-parser": "^1.24",
-    "peckphp/peck": "^0.1.1"
+    "phpstan/phpdoc-parser": "^1.24"
   },
   "autoload-dev": {
     "psr-4": {
