--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.3, 8.4]
+        php: [8.2, 8.3, 8.4]
         laravel: [11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
