--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "require": {
     "php": "^8.3",
-    "laravel/framework": "^11.0"
+    "laravel/framework": "^11.0|^12.0"
   },
   "config": {
     "allow-plugins": {
